# sedlabanki-data

./: .gitignore  Indexation.ipynb  Institutes.ipynb  Mortgages.ipynb  Notebook.ipynb  README.md  credit.db  housing.db  iceland_inflation.csv  main.py  pyproject.toml  schemas.py
