[tool.poetry]
name = "sedlabanki-data"
version = "0.1.0"
description = ""
authors = ["y"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
datasette = "^0.55"
sqlite-utils = "^3.6"
ics = "^0.7"
requests = "^2.25.1"
pandas = "^1.2.3"
openpyxl = "^3.0.7"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
